crates/codegen/src/llvm/snapshots/codegen__llvm__tests__llvm_ir_array_push_length_path.snap
---
source: crates/codegen/src/llvm/mod.rs
expression: normalize_llvm_ir(&ir)
---
; ModuleID = 'main'
source_filename = "main"

declare ptr @malloc(i64)

define double @f_wrap(double %0) {
entry:
  ret double 2.000000e+00
}

define i32 @main() {
entry:
  ret i32 0
}
